@@ -131,7 +131,7 @@
 	    12:34T31/01/2002
 	</CompletionTime>
 
-	<Target type="normal">
+	<Target type="normal" ident="Observation">
 	    This is the 1st observation Target.
 
 	    The Target attribute ident should be filled in by the Telescope.
